# backend/interfaces/server/openapi/server.gen.go
@@ -1,7 +1,7 @@
-// Package Openapi provides primitives to interact the openapi HTTP API.
+// Package openapi provides primitives to interact the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
-package Openapi
+package openapi
 
 import (
 	"fmt"
@@ -13,14 +13,17 @@ import (
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
-	// Returns a list of experiments.
-	// (GET /experiment/mddcw)
-	ListExperimentsMDDCW(ctx echo.Context) error
+	// Returns a list of active experiments.
+	// (GET /experiment/mddcw/active)
+	ListExperimentsMDDCWActive(ctx echo.Context) error
+	// Returns a list of inactive experiments.
+	// (GET /experiment/mddcw/inactive)
+	ListExperimentsMDDCWInactive(ctx echo.Context) error
 	// Represents a experiment by specified ID.
 	// (GET /experiment/mddcw/{id})
 	GetExperimentMDDCWById(ctx echo.Context, id int) error
 	// Register the result of the specified experiment ID.
-	// (POST /experiments/mddcw/{id}/results)
+	// (POST /experiment/mddcw/{id}/results)
 	RegisterResultOfExperimentMDDCWById(ctx echo.Context, id int) error
 	// Returns "OK"
 	// (GET /ping)
@@ -32,12 +35,21 @@ type ServerInterfaceWrapper struct {
 	Handler ServerInterface
 }
 
-// ListExperimentsMDDCW converts echo context to params.
-func (w *ServerInterfaceWrapper) ListExperimentsMDDCW(ctx echo.Context) error {
+// ListExperimentsMDDCWActive converts echo context to params.
+func (w *ServerInterfaceWrapper) ListExperimentsMDDCWActive(ctx echo.Context) error {
 	var err error
 
 	// Invoke the callback with all the unmarshalled arguments
-	err = w.Handler.ListExperimentsMDDCW(ctx)
+	err = w.Handler.ListExperimentsMDDCWActive(ctx)
+	return err
+}
+
+// ListExperimentsMDDCWInactive converts echo context to params.
+func (w *ServerInterfaceWrapper) ListExperimentsMDDCWInactive(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.ListExperimentsMDDCWInactive(ctx)
 	return err
 }
 
@@ -110,9 +122,10 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 		Handler: si,
 	}
 
-	router.GET(baseURL+"/experiment/mddcw", wrapper.ListExperimentsMDDCW)
+	router.GET(baseURL+"/experiment/mddcw/active", wrapper.ListExperimentsMDDCWActive)
+	router.GET(baseURL+"/experiment/mddcw/inactive", wrapper.ListExperimentsMDDCWInactive)
 	router.GET(baseURL+"/experiment/mddcw/:id", wrapper.GetExperimentMDDCWById)
-	router.POST(baseURL+"/experiments/mddcw/:id/results", wrapper.RegisterResultOfExperimentMDDCWById)
+	router.POST(baseURL+"/experiment/mddcw/:id/results", wrapper.RegisterResultOfExperimentMDDCWById)
 	router.GET(baseURL+"/ping", wrapper.Ping)
 
 }
